Reprogrammed to use aws cli

--- a/jobs/cfbackup/templates/backup.sh.erb
+++ b/jobs/cfbackup/templates/backup.sh.erb
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-export PATH=/var/vcap/packages/s3-cli/java/bin:$PATH
-export JAVA_HOME=/var/vcap/packages/s3-cli/java
+export PATH=/var/vcap/packages/aws-cli/bin:$PATH
+
 
 # this would run a backup
 /var/vcap/packages/cfops/cfops_linux_amd64/cfops backup \
@@ -11,13 +11,21 @@ export JAVA_HOME=/var/vcap/packages/s3-cli/java
     -tp <%= p("backup.ops_manager.tempest_password") %> \
     -d /var/vcap/data/jobs/cfbackup/
 
+export AWS_ACCESS_KEY_ID=<%= p("backup.s3.access-key-id") %>
+export AWS_SECRET_ACCESS_KEY=<%= p("backup.s3.secret-access-key") %>
+export AWS_DEFAULT_REGION=<%= p("backup.s3.region") %>
+
 # this would upload the backup to an S3 bucket
-/var/vcap/packages/s3-cli/cli/bin/s3 \
-    --access-key-id <%= p("backup.s3.access-key-id") %> \
-    --secret-access-key <%= p("backup.s3.secret-access-key") %> \
-    --bucket <%= p("backup.s3.bucket") %> \
-    --folder <%= p("backup.s3.folder") %> \
-    --file /var/vcap/data/jobs/cfbackup/somethingFromLastCommand \
-    --proxy-host <%= p("backup.s3.proxy-host") %> \
-    --proxy-port <%= p("backup.s3.proxy-port") %> \
-    --kms-key-id <%= p("backup.s3.kms-key-id") %>
+aws s3 cp \
+    /var/vcap/data/jobs/cfbackup \
+    <%= p("backup.s3.bucket") %> \
+    --recursive
+
+    # --access-key-id <%= p("backup.s3.access-key-id") %> \
+    # --secret-access-key <%= p("backup.s3.secret-access-key") %> \
+    # --bucket <%= p("backup.s3.bucket") %> \
+    # --folder <%= p("backup.s3.folder") %> \
+    # --file /var/vcap/data/jobs/cfbackup/somethingFromLastCommand \
+    # --proxy-host <%= p("backup.s3.proxy-host") %> \
+    # --proxy-port <%= p("backup.s3.proxy-port") %> \
+    # --kms-key-id <%= p("backup.s3.kms-key-id") %>
