Create backup dir

--- a/jobs/pcfbackup/templates/backup.sh.erb
+++ b/jobs/pcfbackup/templates/backup.sh.erb
@@ -1,11 +1,13 @@
 #!/bin/bash
 
 # this would run a backup
+mkdir -p /var/vcap/data/pcfbackup
+
 /var/vcap/packages/cfops/cfops_linux_amd64/cfops backup \
     --opsmanagerhost <%= p("backup.opsmanagerhost") %> \
     --adminuser <%= p("backup.adminuser") %> \
     --adminpass <%= p("backup.adminpass") %> \
     --opsmanageruser <%= p("backup.opsmanageruser") %> \
     --opsmanagerpass <%= p("backup.opsmanagerpass") %> \
-    -d /var/vcap/data/jobs/pcfbackup/ \
+    -d /var/vcap/data/pcfbackup/ \
     --tl <%= p("backup.tilelist") %>
