--- a/jobs/pcfbackup/templates/backup.sh.erb
+++ b/jobs/pcfbackup/templates/backup.sh.erb
@@ -2,16 +2,45 @@
 
 set -ex
 
+PIDFILE=/var/vcap/sys/run/cfops/cfops.pid
+
+mkdir -p `dirname "$PIDFILE"`
+chown vcap:vcap `dirname "$PIDFILE"`
+
 export BACKUP_DIR=<%= p("backup.directory") %>
-export PATH=/var/vcap/packages/cfops/cfops_linux_amd64:$PATH
+export PATH=/var/vcap/packages/cfops/cfops_linux_amd64:/var/vcap/packages/aws-cli/bin:$PATH
 
-mkdir -p $BACKUP_DIR
+if [ ! -d "$BACKUP_DIR" ]; then
+  mkdir -p $BACKUP_DIR
 
-cfops --logLevel debug backup \
-    --opsmanagerhost <%= p("backup.opsmanagerhost") %> \
-    --adminuser <%= p("backup.adminuser") %> \
-    --adminpass <%= p("backup.adminpass") %> \
-    --opsmanageruser <%= p("backup.opsmanageruser") %> \
-    --opsmanagerpass <%= p("backup.opsmanagerpass") %> \
-    -d $BACKUP_DIR \
-    --tl "<%= p("backup.tilelist") %>"
+  /sbin/start-stop-daemon \
+      --pidfile $PIDFILE \
+      --exec /bin/bash \
+      --make-pidfile \
+      --start \
+      -- -c "cfops --logLevel debug backup \
+        --opsmanagerhost <%= p("backup.opsmanagerhost") %> \
+        --adminuser <%= p("backup.adminuser") %> \
+        --adminpass <%= p("backup.adminpass") %> \
+        --opsmanageruser <%= p("backup.opsmanageruser") %> \
+        --opsmanagerpass <%= p("backup.opsmanagerpass") %> \
+        -d $BACKUP_DIR \
+        --tl '<%= p("backup.tilelist") %>'
+      "
+fi
+
+export AWS_ACCESS_KEY_ID=<%= p("backup.s3.access-key-id") %>
+export AWS_SECRET_ACCESS_KEY=<%= p("backup.s3.secret-access-key") %>
+export AWS_DEFAULT_REGION=<%= p("backup.s3.region") %>
+
+# aws s3 cp \
+#     $BACKUP_DIR \
+#     <%= p("backup.s3.bucket") %> \
+#     --recursive
+if [ -d "$BACKUP_DIR" ]; then
+  aws s3 sync \
+      $BACKUP_DIR \
+      s3://<%= p("backup.s3.bucket") %>
+fi
+
+rm -rf  $BACKUP_DIR
